# meet-boost-interprocess

./: .clang-format  CMakeLists.txt  README.md
constructed-objects/: CMakeLists.txt  constructed-objects.cpp
demo/: CMakeLists.txt  client.cpp  config.hpp  context.hpp  message.hpp  server.cpp
docs/: diagrams.drawio
managed-shared-memory/: CMakeLists.txt  managed-shared-memory.cpp
message-queue/: CMakeLists.txt  mq-client.cpp  mq-message.hpp  mq-server.cpp
shared-memory/: CMakeLists.txt  shared-memory.cpp
