cmake_minimum_required(VERSION 3.20)
project(meet-boost-interprocess)

if (${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
    add_compile_options (-fdiagnostics-color=always)
elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
    add_compile_options (-fcolor-diagnostics)
endif ()

set(Boost_USE_STATIC_LIBS        ON)
set(Boost_USE_DEBUG_LIBS        OFF)
set(Boost_USE_RELEASE_LIBS       ON)
set(Boost_USE_MULTITHREADED      ON)
set(Boost_USE_STATIC_RUNTIME    OFF)
find_package(Boost REQUIRED)

add_subdirectory(message-queue)
add_subdirectory(shared-memory)
add_subdirectory(managed-shared-memory)
add_subdirectory(constructed-objects)
add_subdirectory(synchronization)
add_subdirectory(demo)
